Fix header alignment

--- a/src/css_modules/Header.module.css
+++ b/src/css_modules/Header.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    align-items: center;
     padding: 10px 15px;
     background: lightgrey;
 }
